 7-Dec-2020  - V0.92 Update diagnostics logging in ExecUtils()
13-Dec-2020  - V0.93 Add runShell() method to ExecUtils()
14-Dec-2020  - V0.94 Add option to suppress stderr output in ExecUtils()
28-Dec-2020  - V0.95 Catch empty directory in mkdirForFile()
20-Jan-2021  - V0.96 Adding IndexUtils() as a potentially temporary placement for this module.
24-Jan-2021  - V0.97 Update error logging in ExecUtils(), add sort() method to IndexBase()
29-Jan-2021  - V0.98 Update numpy/mmcif dependencies
29-Jan-2021  - V0.99 Documentation and installation adjustments
26-Feb-2021  - V1.00 Change pickle.HIGHEST_PROTOCOL to pickle.DEFAULT_PROTOCOL
10-Mar-2021  - V1.01 Add noRetry argument to FileUtil.get()
10-May-2021  - V1.12 Update FASTA parser in FastaUtil()
11-Jun-2021  - V1.13 Add StashableBase() module
14-Jun-2021  - V1.14 Add remotePrefix support to backup/restore methods in StashableBase()
19-Jul-2021  - V1.15 Add GitUtil() module and associated tests, add git support in StashableBase()
27-Jul-2021  - V1.16 Adjust stash and git logging verbosity
 3-Aug-2021  - V1.17 Propagate the uncomment option properly to __processList() method in IoUtil()
 5-Aug-2021  - V1.18 Add FtpUtil() class to handle FTP server operations.
17-Aug-2021  - V1.19 Add sendContentType for postUnwrapped in UrlRequestUtil()
28-Aug-2021  - V1.20 Add minimum file size warning for mmCIF deserializer
 3-Sep-2021  - V1.21 Add FileLock() module
 8-Sep-2021  - V1.22 Add LogUtil() structured logging formatter module
16-Sep-2021  - V1.23 Add '.xz' file uncompression capability to FileUtil()
16-Sep-2021  - V1.24 Add support for zero copy http mmCIF access.
17-Sep-2021  - V1.25 Add explicit test for gzip compression in IoUtil.__deserializeXML()
17-Sep-2021  - V1.26 Fix protocol issue in remote FileUtil.exists() and size() methods
20-Sep-2021  - V1.27 Suppress logging of protocol errors in FileUtil()
21-Sep-2021  - V1.28 Protect against missing response headers in FileUtil.exists() and size() methods