@@ -51,7 +51,8 @@ class MarshalUtilTests(unittest.TestCase):
         self.__pathJsonTestFile = os.path.join(TOPDIR, "rcsb", "mock-data", "dictionaries", "vrpt_dictmap.json")
         self.__pathIndexFile = os.path.join(TOPDIR, "rcsb", "mock-data", "MOCK_EXCHANGE_SANDBOX", "update-lists", "all-pdb-list")
         self.__pathCifFile = os.path.join(TOPDIR, "rcsb", "mock-data", "MOCK_BIRD_CC_REPO", "0", "PRDCC_000010.cif")
-        self.__locatorCifFile = "http://ftp.wwpdb.org/pub/pdb/data/structures/divided/mmCIF/00/100d.cif.gz"
+        self.__locatorCifFile = "https://ftp.wwpdb.org/pub/pdb/data/structures/divided/mmCIF/00/100d.cif.gz"
+        self.__locatorCifFileBad = "https://ftp.wwpdb.org/pub/pdb/data/structures/divided/mmCIF/00/100dx.cif.gz"
         #
         self.__workPath = os.path.join(HERE, "test-output")
         self.__pathSaveDictionaryFile = os.path.join(self.__workPath, "mmcif_pdbx_v5_next.dic")
@@ -63,7 +64,7 @@ class MarshalUtilTests(unittest.TestCase):
         self.__pathSaveFastaFile = os.path.join(self.__workPath, "test-pre-release.fasta")
         #
 
-        self.__urlTarget = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump.tar.gz"
+        self.__urlTarget = "https://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump.tar.gz"
         self.__urlTargetBad = "ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump-missing.tar.gz"
         #
         self.__mU = MarshalUtil()
@@ -135,6 +136,9 @@ class MarshalUtilTests(unittest.TestCase):
             self.assertGreaterEqual(len(cL), 1)
             nL = cL[0].getObjNameList()
             self.assertGreaterEqual(len(nL), 55)
+            #
+            cL = self.__mU.doImport(self.__locatorCifFileBad, fmt="mmcif")
+            self.assertEqual(len(cL), 0)
         except Exception as e:
             logger.exception("Failing with %s", str(e))
             self.fail()
@@ -246,8 +250,9 @@ class MarshalUtilTests(unittest.TestCase):
         """Test the case to read URL target of a tdd"""
         try:
             mU = MarshalUtil(workPath=self.__workPath)
-            version = "2.07-2019-07-23"
-            urlTarget = "http://scop.berkeley.edu/downloads/update"
+            # https://scop.berkeley.edu/downloads/parse/dir.des.scope.2.08-stable.txt
+            version = "2.08-stable"
+            urlTarget = "https://scop.berkeley.edu/downloads/parse"
             encoding = "utf-8-sig" if sys.version_info[0] > 2 else "ascii"
             fn = "dir.des.scope.%s.txt" % version
             url = os.path.join(urlTarget, fn)
