@@ -5,7 +5,7 @@ pytz
 python-dateutil
 ruamel.yaml
 multiprocess
-mmcif >= 0.61
+mmcif >= 0.72
 rcsb.utils.validation >= 0.20
 backports.tempfile; python_version < "3.0"
 PyNaCl >= 1.3.0
